--- a/main.tex
+++ b/main.tex
@@ -100,7 +100,7 @@
 \makecover
 %\input{front/denotation}%物理量名称表,符合规范为主，有要求添加
 %\cleardoublepage  %自定义在什么位置进行右翻页
-\tableofcontents    % 中文目录,有些专业研究生开题要求添加目录，中期、本科不要求，以教学秘书发送模板要求为准
+\tableofcontents    % 中文目录,有些专业研究生开题要求添加目录，中期、本科不要求，以教学秘书发送模板要求为准, 自行添加
 %\cleardoublepage  %自定义在什么位置进行右翻页
 %\tableofengcontents % 英文目录,硕本不要求,开题/中期不要求
 
@@ -118,7 +118,7 @@
 %\caption{Float layout with rules}\label{fig:fludf} %debug 选项
 %\end{figure} %debug 选项
 \include{body/introduction}
-%\include{body_kaiti}
+
 
 \backmatter
 %硕博书序
