--- a/main.tex
+++ b/main.tex
@@ -124,7 +124,7 @@
 %硕博书序
 %\include{back/conclusion}   % 结论
 \bibliographystyle{hithesis} %如果没有参考文献时候
-\bibliography{reference}
+%\bibliography{reference}	%开题/中期报告如果需要添加参考文献，需要注释此行，然后将此行内容添加到body文档正文末尾，否则会另起新页；对于正常毕业论文，则保留此行，去掉body文档末尾该项。
 %\begin{appendix}%附录
 %\input{back/appA.tex}
 %\end{appendix}
