--- a/hithesis.dtx
+++ b/hithesis.dtx
@@ -1832,11 +1832,23 @@ delim_1 "\\hspace*{\\fill}"
 %    图表名称及格式。
 %    \changes{v1.0.8}{2017/11/5}{删除冗余公式符号定义}
 %    \begin{macrocode}
-\renewcommand{\thesubtable}{(\alph{subtable})}
+% \changes{v2.0.6.1a}{20181221}{修改调整图表编号，添加判断，在开题/中期时，使图表编号为 section-1的格式，而非chapter-1} % _added by t
+% \begin{macrocode}
+\ifhit@kaiti
+\renewcommand{\thefigure}{\arabic{section}-\arabic{figure}}%使图编号为 7-1 的格式 
+\renewcommand{\thetable}{\arabic{section}-\arabic{table}}%使表编号为 7-1 的格式
+\else
+\ifhit@zhongqi
+\renewcommand{\thefigure}{\arabic{section}-\arabic{figure}}%使图编号为 7-1 的格式 
+\renewcommand{\thetable}{\arabic{section}-\arabic{table}}%使表编号为 7-1 的格式
+\else
 \renewcommand{\thefigure}{\arabic{chapter}-\arabic{figure}}%使图编号为 7-1 的格式 %\protect{~}
+\renewcommand{\thetable}{\arabic{chapter}-\arabic{table}}%使表编号为 7-1 的格式
+\fi \fi
+\renewcommand{\thesubtable}{(\alph{subtable})}
 \renewcommand{\thesubfigure}{\alph{subfigure})}%使子图编号为 a)的格式
 \renewcommand{\p@subfigure}{\thefigure~} %使子图引用为 7-1 a) 的格式，母图编号和子图编号之间用~加一个空格
-\renewcommand{\thetable}{\arabic{chapter}-\arabic{table}}%使表编号为 7-1 的格式
+% \end{macrocode}
 %    \end{macrocode}
 %    调整罗列环境、浮动格式、间距。
 %    \begin{macrocode}
