--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -1,6 +1,6 @@
 % !Mode:: "TeX:UTF-8"
 
-\chapter{示例文档}[Example]	% 开题/中期没有chapter层级，可注释去掉
+\chapter*{示例文档/题目等}[Example]	% 开题/中期没有chapter层级，可注释去掉，也可使用\chapter*{开题/中期题目}来生成无标号的chapter题目
 
 这是 \hithesis\ 的示例文档，基本上覆盖了模板中所有格式的设置。建议大家在使用模
 板之前，除了阅读《\hithesis\:哈尔滨工业大学学位论文模板》\footnote{即
