update licience note

--- a/hithesis.dtx
+++ b/hithesis.dtx
@@ -12,8 +12,8 @@
 % and version 1.3a or later is part of all distributions of LaTeX
 % version 2004/10/01 or later.
 %
-% 2018/12/19 new branch hithesis-alpha by Tan <xz.tan@outlook.com>
-% Base on original v2.0.6, created v2.0.6a 
+% 2018/12/19 Start a new branch hithesis-alpha by Tan <xz.tan@outlook.com>
+% Base on original v2.0.6, creating v2.0.6a 
 % New add proposal/midterm report template.
 % \fi
 %
