--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %hithesis-alpha 用来测试添加开题/中期报告功能，非正式
 %\documentclass[newtxmath=true,newgeometry=two,capcenterlast=true,subcapcenterlast=true,openright=true,absupper=true,fontset=windowsnew,type=doctor]{hithesis}
 %\newcommand{\customheader}{testtest}
-\documentclass[newtxmath=true,newgeometry=two,capcenterlast=true,subcapcenterlast=true,openright=false,absupper=true,noheader=false,stage=kaiti,type=master]{hithesis}
+\documentclass[newtxmath=true,newgeometry=two,capcenterlast=true,subcapcenterlast=true,openright=false,absupper=true,noheader=false,stage=kaiti,type=bachelor]{hithesis}
 
 %%开题去掉右翻页设置，openright=right改为false，大论文需改回来 _t
 % 此处选项中不要有空格
