--- a/front/custom_definition.tex
+++ b/front/custom_definition.tex
@@ -1,3 +1,4 @@
+% !Mode:: "TeX:UTF-8"
 %在下面添加自定义宏包、命令
 
 %------------以下是自定义添加的宏包（下面为示例，可删除）------------------
@@ -5,7 +6,6 @@
 \usepackage{multirow} %表格多行合并
 \usepackage{slashed}	% 场论slash
 \usepackage{cancel}
-
 \usepackage{setspace} %用于调整多行公式间距， \begin{spacing}{1.6} \begin{equation}..\end{equation}\end{spacing}  ！！！caution：使用宏包同时也会改变表格的行距需在每个表格\begin{table}后添加：\renewcommand\arraystretch{1.55}
 
 
