--- a/front/reportcover.tex
+++ b/front/reportcover.tex
@@ -15,12 +15,12 @@
   % 中文信息
   %=========
   ctitleone={局部多孔质气体静压局部多孔质气体静压}, %论文题目，第一行此处最多12个字，多出的字放在\ctitletwo
-  ctitletwo={轴承关键技术的研究}, %论文题目第二行，第一行放不下的文字，放在这里
+  ctitletwo={轴承关键技术的研究}, %选填项，论文题目第二行，第一行放不下的文字放在这里
   csubject={机械制造及其自动化},
-  caffil={机电工程学院},
+   caffil={机电工程学院},
   cauthor={于冬梅},
   csupervisor={某某某教授},
-  ccosupervisor={某某某教授}, % 联合指导老师
+  % ccosupervisor={某某某教授}, % 联合指导老师
   % 日期自动使用当前时间，若需指定按如下方式修改：
   cdate={超新星纪元},
   cstudentid={9527},
