--- a/hithesis.dtx
+++ b/hithesis.dtx
@@ -12,14 +12,17 @@
 % and version 1.3a or later is part of all distributions of LaTeX
 % version 2004/10/01 or later.
 %
-% 2018/12/19 Start a new branch hithesis-alpha by Tan <xz.tan@outlook.com>
+% 2018/12/19 Start a new branch hithesis-alpha by Tan <https://github.com/Regulust>
 % Base on original v2.0.6, creating v2.0.6a 
 % New add proposal/midterm report template.
+% 2020/02/05 Update hithesis-alpha v2.0.11.0a
+% Merge the changes of latest version hithesis v2.0.11
 % \fi
 %
 % \iffalse
 %<*driver>
-\ProvidesFile{hithesis.dtx}[2018/12/19 2.0.6a Harbin Institute of Technology Thesis Template(add proposal/midterm report)]
+%\ProvidesFile{hithesis.dtx}[2018/12/19 2.0.6a Harbin Institute of Technology Thesis Template(add proposal/midterm report)]
+\ProvidesFile{hithesis.dtx}[2019/06/27 2.0.11a Harbin Institute of Technology Thesis Template(add proposal/midterm report)]
 \documentclass{ltxdoc}
 \usepackage{dtx-style}
 
@@ -89,7 +92,7 @@
 % \begin{abstract}\noindent
 % 该宏包为哈尔滨工业大学本、硕、博毕业论文模板。以后会陆续加入开题、中期、博士后
 % 出站报告等模板。
-% Update: v2.0.6a 添加开题/中期报告模板 by Tan
+% Update: v2.0.6a 添加开题/中期报告模板 https://github.com/Regulust/hithesis-alpha
 % \end{abstract}
 %
 % \vskip2cm
@@ -153,6 +156,11 @@
 % \end{itemize}
 %
 % \note[注意：]{如果登录不了github的同学可以登录oschina下载。}
+%
+% hithesis-alpha 链接：
+% \begin{itemize}
+% \item github: \href{https://github.com/Regulust/hithesis-alpha}
+% \end{itemize}
 %
 % \subsection{模板的组成}
 % 下表列出了 \hithesis\ 的主要文件及其功能介绍：
@@ -755,7 +763,7 @@
 % 的 \cs{cite}\marg{key}，而 \cs{inlinecite}\marg{key} 则用来生成正文模式。
 %
 % 关于参考文献模板推荐使用 \BibTeX，关于中文参考文献需要额外增加一个 Entry:
-% \texttt{lang}，将其设置为 \texttt{zh} 用来指示此参考文献为中文，以
+% \texttt{language}，将其设置为 \texttt{zh} 用来指示此参考文献为中文，以
 % 便 \file{hithesis.bst} 处理。如：
 % \begin{latex}
 % @INPROCEEDINGS{cnproceed,
@@ -765,7 +773,7 @@
 %   year      = 2006,
 %   address   = {西安, 中国},
 %   month     = sep,
-%   lang      = "zh",
+%   language      = "zh",
 % }
 %
 % @ARTICLE{cnarticle,
@@ -775,7 +783,7 @@
 %   PAGES   = "260--266",
 %   VOLUME  = "224",
 %   YEAR    = "1800",
-%   LANG    = "zh",
+%   LANGUAGE    = "zh",
 % }
 % \end{latex}
 %
@@ -831,7 +839,7 @@
 % \begin{publication}
 % \noindent\textbf{（一）发表的学术论文}
 % \begin{publist}
-% \item	XXX，XXX. Static Oxidation Model of Al-Mg/C Dissipation Thermal Protection Materials[J]. Rare Metal Materials and Engineering, 2010, 39(Suppl. 1): 520-524.（SCI~收录，IDS号为~669JS，IF=0.16）
+% \item  XXX，XXX. Static Oxidation Model of Al-Mg/C Dissipation Thermal Protection Materials[J]. Rare Metal Materials and Engineering, 2010, 39(Suppl. 1): 520-524.（SCI~收录，IDS号为~669JS，IF=0.16）
 % \item XXX，XXX. 精密超声振动切削单晶铜的计算机仿真研究[J]. 系统仿真学报，2007，19（4）：738-741，753.（EI~收录号：20071310514841）
 % \item XXX，XXX. 局部多孔质气体静压轴向轴承静态特性的数值求解[J]. 摩擦学学报，2007（1）：68-72.（EI~收录号：20071510544816）
 % \item XXX，XXX. 硬脆光学晶体材料超精密切削理论研究综述[J]. 机械工程学报，2003，39（8）：15-22.（EI~收录号：2004088028875）
@@ -846,7 +854,7 @@
 %
 % \noindent\textbf{（三）参与的科研项目及获奖情况}
 % \begin{publist}
-% \item	XXX，XXX. XX~气体静压轴承技术研究, XX~省自然科学基金项目.课题编号：XXXX.
+% \item  XXX，XXX. XX~气体静压轴承技术研究, XX~省自然科学基金项目.课题编号：XXXX.
 % \item XXX，XXX. XX~静载下预应力混凝土房屋结构设计统一理论. 黑江省科学技术二等奖, 2007.
 % \end{publist}
 % %\vfill
@@ -968,7 +976,7 @@
   \hit@doctorfalse
   \expandafter\csname hit@#1true\endcsname}
 %    \end{macrocode}
-%	定义stage项，区分开题、中期，默认default为毕业论文 _modified by hithesis-alpha
+%  定义stage项，区分开题、中期，默认default为毕业论文 _modified by hithesis-alpha
 %    \begin{macrocode}
 \newif\ifhit@kaiti
 \newif\ifhit@zhongqi
@@ -977,7 +985,7 @@
   \hit@zhongqifalse
   \expandafter\csname hit@#1true\endcsname}
 %    \end{macrocode}
-%	定义headersetting项，配置noheader和customize，默认default为正常自动匹配显示 _modified by hithesis-alpha
+%  定义headersetting项，配置noheader和customize，默认default为正常自动匹配显示 _modified by hithesis-alpha
 %    \begin{macrocode}
 \newif\ifhit@noheader
 \newif\ifhit@customizeheader
@@ -1047,6 +1055,11 @@
 %    \begin{macrocode}
 \DeclareBoolOption[false]{openright}
 %    \end{macrocode}
+% \changes{v2.0.10}{2019/6/25}{此处添加是否为提交图书馆电子版}
+% 是否为提交图书馆电子版。
+%    \begin{macrocode}
+\DeclareBoolOption[false]{library}
+%    \end{macrocode}
 % 图题和标题最后一行是否居中对其（默认是，非规范要求）。
 % \changes{v1.0.6}{2017/10/25}{此处更改了选项的名称}
 %    \begin{macrocode}
@@ -1082,9 +1095,9 @@
 % 声明字体选项。
 %    \begin{macrocode}
 %\DeclareBoolOption[false]{noheader}
-%	添加noheader项，true时可以用来去掉页眉(开题、中期报告老师可能不让留页眉)，默认false，保留页眉；已弃用，2.0.6.2a合并入headersetting  _modified by hithesis-alpha
+%  添加noheader项，true时可以用来去掉页眉(开题、中期报告老师可能不让留页眉)，默认false，保留页眉；已弃用，2.0.6.2a合并入headersetting  _modified by hithesis-alpha
 %\DeclareBoolOption[false]{customizeheader}
-%	添加customizeheader项，可以用来自定义页眉文字，默认false；已弃用，2.0.6.2a合并入headersetting _modified by hithesis-alpha
+%  添加customizeheader项，可以用来自定义页眉文字，默认false；已弃用，2.0.6.2a合并入headersetting _modified by hithesis-alpha
 \DeclareStringOption{fontset}
 %    \end{macrocode}
 % 将其余选项默认传递给 \pkg{ctexbook}。
@@ -1274,36 +1287,36 @@
 %    \changes{v2.0.0}{2018/6/14}{添加版芯设置选项}
 %    \begin{macrocode}
 \ifhit@geometrynewtwo%
-	\geometry{
-	  centering,
-	  text={150true mm,236true mm},
-	  left=30true mm,
-	  head=5true mm,
-	  headsep=2true mm,
-	  footskip=0true mm,
-	  foot=5.2true mm
-	}
+   \geometry{
+     centering,
+     text={150true mm,236true mm},
+     left=30true mm,
+     head=5true mm,
+     headsep=2true mm,
+     footskip=0true mm,
+     foot=5.2true mm
+   }
 \else%
-	\ifhit@geometrynewone%
-		\geometry{
-		  centering,
-		  text={150true mm,240true mm},
-		  left=30true mm,
-		  head=5true mm,
-		  headsep=0true mm,
-		  footskip=0true mm,
-		  foot=0true mm
-		}
-	\else%
-		\geometry{%根据PlutoThesis 原版定义而来
-			text={150true mm,224true mm},
-			top=35.5true mm,
-			left=30true mm,
-			head=5true mm,
-			headsep=2.5true mm,
-			foot=8.5true mm
-		}
-	\fi%
+   \ifhit@geometrynewone%
+      \geometry{
+        centering,
+        text={150true mm,240true mm},
+        left=30true mm,
+        head=5true mm,
+        headsep=0true mm,
+        footskip=0true mm,
+        foot=0true mm
+      }
+   \else%
+      \geometry{%根据PlutoThesis 原版定义而来
+         text={150true mm,224true mm},
+         top=35.5true mm,
+         left=30true mm,
+         head=5true mm,
+         headsep=2.5true mm,
+         foot=8.5true mm
+      }
+   \fi%
 \fi%
 %    \end{macrocode}
 %    载入显示行号的包。
@@ -1370,8 +1383,11 @@ delim_1 "\\hspace*{\\fill}"
 % \begin{macro}{\cleardoublepage}
 % 对于 \textsl{openright} 选项，必须保证章首页右开，且如果前章末页无内容须
 % 清空其页眉页脚。
+% 如果\textsl{library}为真，则强制设置\textsl{openright}为真。
+% \changes{v2.0.10}{2019/6/25}{添加\textsl{openright}和\textsl{library}逻辑}
 %    \begin{macrocode}
 %<*cls>
+\ifhit@library\hit@openrightfalse\else\relax\fi
 \let\hit@cleardoublepage\cleardoublepage
 \newcommand{\hit@clearemptydoublepage}{%
   \clearpage{\pagestyle{hit@empty}\hit@cleardoublepage}
@@ -1380,8 +1396,6 @@ delim_1 "\\hspace*{\\fill}"
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\frontmatter}
-% \begin{macro}{\mainmatter}
-% \begin{macro}{\backmatter}
 % 我们的单面和双面模式与常规的不太一样。
 %    \begin{macrocode}
 \renewcommand\frontmatter{%
@@ -1390,25 +1404,36 @@ delim_1 "\\hspace*{\\fill}"
   \pagenumbering{Roman}
   \pagestyle{hit@empty}
 }
-
+%    \end{macrocode}
+% \end{macro}
+% \begin{macro}{\mainmatter}
+% 根据打印店（伪官方）的猛虎式操作，\cs{mainmatter}命令的逻辑是，双面打印时第一章必须在奇数页
+% （不看文档别怪我）。
+% \changes{v2.0.11}{2018/06/27}{设置第一章必须在奇数页}
+%    \begin{macrocode}
 \renewcommand\mainmatter{%
   \ifhit@tocblank%
   \addtocontents{toc}{\vspace{\baselineskip}} %规范中并没有这一要求，此处不应该加
   \addtocontents{toe}{\vspace{\baselineskip}}
   \fi%
-  \ifhit@openright\cleardoublepage\else\clearpage\fi
+  \ifhit@doctor%
+    \ifhit@library\clearpage\else\cleardoublepage\fi
+    \else%
+    \clearpage
+  \fi%
   \@mainmattertrue
   \pagenumbering{arabic}
   \pagestyle{hit@headings}
 }
-
+%    \end{macrocode}
+% \end{macro}
+% \begin{macro}{\backmatter}
+%    \begin{macrocode}
 \renewcommand\backmatter{%
   \ifhit@openright\cleardoublepage\else\clearpage\fi
   \@mainmattertrue}
 %</cls>
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 %
 % \subsubsection{字体}
@@ -1459,6 +1484,7 @@ delim_1 "\\hspace*{\\fill}"
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\dachu}
 % \begin{macro}{\chuhao}
 % \begin{macro}{\xiaochu}
 % \begin{macro}{\yihao}
@@ -1479,6 +1505,7 @@ delim_1 "\\hspace*{\\fill}"
 % \begin{macro}{\bahao}
 % 一组字号定义。
 %    \begin{macrocode}
+\hit@def@fontsize{dachu}{58bp}
 \hit@def@fontsize{chuhao}{42bp}
 \hit@def@fontsize{xiaochu}{36bp}
 \hit@def@fontsize{yihao}{26bp}
@@ -1499,6 +1526,7 @@ delim_1 "\\hspace*{\\fill}"
 \hit@def@fontsize{bahao}{5bp}
 %</cls>
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -1546,73 +1574,73 @@ delim_1 "\\hspace*{\\fill}"
 \fancypagestyle{hit@headings}{%
   \fancyhf{}
   \ifhit@doctor
-	\ifhit@kaiti	%页眉判断-开题 _modified by hithesis-alpha
-	\fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
-	\else
-	\ifhit@zhongqi	%页眉判断-中期 _modified by hithesis-alpha
-	\fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
-	\else
+   \ifhit@kaiti   %页眉判断-开题 _modified by hithesis-alpha
+   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
+   \else
+   \ifhit@zhongqi %页眉判断-中期 _modified by hithesis-alpha
+   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
+   \else
   \fancyhead[CO]{\songti\xiaowu[0]\leftmark}
   \fancyhead[CE]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname}%
-	\fi
-	\fi
+   \fi
+   \fi
   \fi
   \ifhit@master
-	\ifhit@kaiti	%页眉判断-开题 _modified by hithesis-alpha
-	\fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
-	\else
-	\ifhit@zhongqi	%页眉判断-中期 _modified by hithesis-alpha
-	\fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
-	\else
+   \ifhit@kaiti   %页眉判断-开题 _modified by hithesis-alpha
+   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
+   \else
+   \ifhit@zhongqi %页眉判断-中期 _modified by hithesis-alpha
+   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname\hit@stagestatus}
+   \else
   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@cdegree\hit@cthesisname}
-	\fi
-	\fi
+   \fi
+   \fi
   \fi
   \ifhit@bachelor
-	\ifhit@kaiti	%页眉判断-开题 _modified by hithesis-alpha
-	\fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@bachelor@cxuewei\hit@bachelor@cthesisname\hit@stagestatus}
-	\else
-	\ifhit@zhongqi	%页眉判断-中期 _modified by hithesis-alpha
-	\fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@bachelor@cxuewei\hit@bachelor@cthesisname\hit@stagestatus}
-	\else
+   \ifhit@kaiti   %页眉判断-开题 _modified by hithesis-alpha
+   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@bachelor@cxuewei\hit@bachelor@cthesisname\hit@stagestatus}
+   \else
+   \ifhit@zhongqi %页眉判断-中期 _modified by hithesis-alpha
+   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@bachelor@cxuewei\hit@bachelor@cthesisname\hit@stagestatus}
+   \else
   \fancyhead[C]{\songti\xiaowu[0]\hit@cschoolname\hit@bachelor@cxuewei\hit@bachelor@cthesisname}%
-	\fi
-	\fi
-	\ifhit@noheader  %单独设置noheader项，可能会有老师要求在开题、中期报告没有页眉，此处为bachelor控制域优先级高于bsheadrule	_modified by hithesis-alpha
-	\fancyhf{}
-	\renewcommand{\headrulewidth}{0pt}
-	\else
-	\ifhit@bsheadrule
-	\renewcommand{\headrule}{
-	\vskip 1.190132pt
-	\hrule\@height2.276208pt\@width\headwidth
-	\vskip 0.75pt
-	\hrule\@height.75pt\@width\headwidth
-	}
-	\else
-	\renewcommand{\headrulewidth}{0pt}
-	\fi
-	\fi
-	\fancyfoot[C]{\xiaowu\if@mainmatter\ifhit@bsmainpagenumberline-~\thepage~-\else\thepage\fi\else\ifhit@bsfrontpagenumberline-~\thepage~-\else\thepage\fi\fi}	%fancyfoot命令位置调整到nonheader判断之后(因为\fancyhf{}也会清空页脚设置)，修正noheader=true之后导致页码消失的逻辑bug  _modified by hithesis-alpha
+   \fi
+   \fi
+   \ifhit@noheader  %单独设置noheader项，可能会有老师要求在开题、中期报告没有页眉，此处为bachelor控制域优先级高于bsheadrule  _modified by hithesis-alpha
+   \fancyhf{}
+   \renewcommand{\headrulewidth}{0pt}
+   \else
+   \ifhit@bsheadrule
+   \renewcommand{\headrule}{
+   \vskip 1.190132pt
+   \hrule\@height2.276208pt\@width\headwidth
+   \vskip 0.75pt
+   \hrule\@height.75pt\@width\headwidth
+   }
+   \else
+   \renewcommand{\headrulewidth}{0pt}
+   \fi
+   \fi
+   \fancyfoot[C]{\xiaowu\if@mainmatter\ifhit@bsmainpagenumberline-~\thepage~-\else\thepage\fi\else\ifhit@bsfrontpagenumberline-~\thepage~-\else\thepage\fi\fi} %fancyfoot命令位置调整到nonheader判断之后(因为\fancyhf{}也会清空页脚设置)，修正noheader=true之后导致页码消失的逻辑bug  _modified by hithesis-alpha
   \else
-	\ifhit@noheader  %单独设置noheader项，可能会有老师要求在开题、中期报告没有页眉，此处为master和doctor控制域	_modified by hithesis-alpha 191212
-	\fancyhf{}
-	\renewcommand{\headrulewidth}{0pt}
-	\else
-	\renewcommand{\headrule}{
-	\vskip 1.190132pt
-	\hrule\@height2.276208pt\@width\headwidth
-	\vskip 0.75pt
-	\hrule\@height.75pt\@width\headwidth
-	}
-	\fi
-	\fancyfoot[C]{\xiaowu-~\thepage~-}	%fancyfoot命令位置调整到nonheader判断之后(因为\fancyhf{}也会清空页脚设置)，修正noheader=true之后导致页码消失的逻辑bug	_modified by hithesis-alpha 191212
+   \ifhit@noheader  %单独设置noheader项，可能会有老师要求在开题、中期报告没有页眉，此处为master和doctor控制域   _modified by hithesis-alpha 191212
+   \fancyhf{}
+   \renewcommand{\headrulewidth}{0pt}
+   \else
+   \renewcommand{\headrule}{
+   \vskip 1.190132pt
+   \hrule\@height2.276208pt\@width\headwidth
+   \vskip 0.75pt
+   \hrule\@height.75pt\@width\headwidth
+   }
+   \fi
+   \fancyfoot[C]{\xiaowu-~\thepage~-}  %fancyfoot命令位置调整到nonheader判断之后(因为\fancyhf{}也会清空页脚设置)，修正noheader=true之后导致页码消失的逻辑bug  _modified by hithesis-alpha 191212
   \fi
  
  % 添加自定义页眉文字代码 _modified by hithesis-alpha 191212 
  % \begin{macrocode}
   \ifhit@customizeheader
-	\fancyhead[C]{\songti\xiaowu[0]\customheader}%
+   \fancyhead[C]{\songti\xiaowu[0]\customheader}%
   \fi
  % \end{macrocode}
 
@@ -1751,13 +1779,15 @@ delim_1 "\\hspace*{\\fill}"
 %    \end{macrocode}
 % \subsubsection{浮动对象以及表格}
 % \label{sec:float}
-% 设置浮动对象和文字之间的距离
+% 设置浮动对象和文字之间的距离，由于规范中没有明确规定，根据经验，设置成正文汉字
+% 高度。
 % \changes{v1.0.9}{2018/01/07}{修正float垂直间距bug}
+% \changes{v2.0.9}{2019/06/24}{修正float垂直间距bug}
 %    \begin{macrocode}
 %<*cls>
 \setlength{\intextsep}{\ifhit@glue 8.50398bp \@plus 2.83465bp \@minus 0bp\else 8.50398bp\fi}
 \setlength{\textfloatsep}{\ifhit@glue 8.50398bp \@plus 2.83465bp \@minus 0bp\else 8.50398bp\fi}
-\setlength{\floatsep}{\ifhit@glue 20.50398bp \@plus 2.83465bp \@minus 0bp\else 20.50398bp\fi}
+\setlength{\floatsep}{\ifhit@glue 12bp \@plus 2.83465bp \@minus 0bp\else 12bp\fi}
 %    \end{macrocode}
 %    此处设置float在p选项时间隔，此处不设置\cs{@fptop}和\cs{@fpbot}以确保居中。
 % \changes{v1.0.12}{2018/04/03}{修正float为p状态时默认不居中bug}
@@ -1798,18 +1828,18 @@ delim_1 "\\hspace*{\\fill}"
   \vskip\abovecaptionskip
   \wuhao\sbox\@tempboxa{#1\ifhit@bachelor\hskip\ccwd\else\enskip\fi#2}%
   \ifdim \wd\@tempboxa >\hsize
-	  \ifhit@capcenterlast%
-		  \vskip 6.3bp%
-		  {\setbox0=\vbox{#1\ifhit@bachelor\hskip\ccwd\else\enskip\fi#2}
-			  \setbox1=\vbox{%
-				  \unvbox0
-				  \setbox2=\lastbox
-				  \hbox to \textwidth{\hfill\unhcopy2 \unskip\unskip\hfill}
-			  }
-		  \unvbox1}
-	  \else%
-		  #1\ifhit@bachelor\hskip\ccwd\else\enskip\fi#2%
-	  \fi%
+     \ifhit@capcenterlast%
+        \vskip 6.3bp%
+        {\setbox0=\vbox{#1\ifhit@bachelor\hskip\ccwd\else\enskip\fi#2}
+           \setbox1=\vbox{%
+              \unvbox0
+              \setbox2=\lastbox
+              \hbox to \textwidth{\hfill\unhcopy2 \unskip\unskip\hfill}
+           }
+        \unvbox1}
+     \else%
+        #1\ifhit@bachelor\hskip\ccwd\else\enskip\fi#2%
+     \fi%
     \par
   \else
   \global \@minipagefalse
@@ -2051,7 +2081,7 @@ delim_1 "\\hspace*{\\fill}"
   {
     \phantomsection
     \markboth{#2}{#2}
-		    \ifthenelse%
+          \ifthenelse%
       {\equal{#2}{\eabstractcname}}%
       {\addcontentsline{toc}{chapter}{\texorpdfstring{\ifhit@arialtitle\sffamily\heiti\else\heiti\fi \ifhit@absupper\MakeUppercase{#2}\else#2\fi}{#2}}}
       {\addcontentsline{toc}{chapter}{\texorpdfstring{\ifhit@arialtitle\sffamily\heiti\else\heiti\fi #2}{#2}}}
@@ -2082,17 +2112,17 @@ delim_1 "\\hspace*{\\fill}"
 \RenewDocumentCommand{\chapter}{s o m o}{%
   \ifhit@openright\cleardoublepage\else\clearpage\fi\phantomsection%
   \IfBooleanTF{#1}%
-  {%	if \chapter*
+  {%  if \chapter*
     \hit@chapter*{#3}%
     \IfValueT{#4}{%
 %    \end{macrocode}
 % 此处添加保护选项
 % \changes{v1.0.13}{2018/4/5}{添加\cs{texorpdfstring}命令去除书签中带有格式时的警告}
 %    \begin{macrocode}
-	    \addcontentsline{toe}{chapter}{\texorpdfstring{\bfseries #4}{#4}}
+       \addcontentsline{toe}{chapter}{\texorpdfstring{\bfseries #4}{#4}}
     }
   }%
-  {%	if \chapter
+  {%  if \chapter
     \IfNoValueTF{#2}%
     {\hit@chapter{#3}}%
     {\hit@chapter[#2]{#3}}%
@@ -2103,7 +2133,7 @@ delim_1 "\\hspace*{\\fill}"
 % 此处添加保护选项
 % \changes{v1.0.13}{2018/4/5}{添加\cs{texorpdfstring}命令去除书签中带有格式时的警告}
 %    \begin{macrocode}
-	    \addcontentsline{toe}{chapter}{\texorpdfstring{\bfseries\relax Chapter \thechapter\hspace{0.5em}\ignorespaces #4}{Chapter \thechapter\hspace{0.5em}\ignorespaces #4}}
+       \addcontentsline{toe}{chapter}{\texorpdfstring{\bfseries\relax Chapter \thechapter\hspace{0.5em}\ignorespaces #4}{Chapter \thechapter\hspace{0.5em}\ignorespaces #4}}
     }
   }
 }
@@ -2111,13 +2141,13 @@ delim_1 "\\hspace*{\\fill}"
 \let\hit@section\section
 \RenewDocumentCommand\section{s o m o}{
   \IfBooleanTF{#1}%
-  {%	if \section*
+  {%  if \section*
     \hit@section*{#3}%
     \IfValueT{#4}{%
       \addcontentsline{toe}{section}{#4}
     }
   }%
-  {%	if \section
+  {%  if \section
     \IfNoValueTF{#2}%
     {\hit@section{#3}}%
     {\hit@section[#2]{#3}}%
@@ -2134,13 +2164,13 @@ delim_1 "\\hspace*{\\fill}"
 \let\hit@subsection\subsection
 \RenewDocumentCommand\subsection{s o m o}{
   \IfBooleanTF{#1}%
-  {%	if \subsection*
+  {%  if \subsection*
     \hit@subsection*{#3}%
     \IfValueT{#4}{%
       \addcontentsline{toe}{subsection}{#4}
     }
   }%
-  {%	if \subsection
+  {%  if \subsection
     \IfNoValueTF{#2}%
     {\hit@subsection{#3}}%
     {\hit@subsection[#2]{#3}}%
@@ -2157,13 +2187,13 @@ delim_1 "\\hspace*{\\fill}"
 \let\hit@subsubsection\subsubsection
 \RenewDocumentCommand\subsubsection{s o m o}{
   \IfBooleanTF{#1}%
-  {%	if \subsubsection*
+  {%  if \subsubsection*
     \hit@subsubsection*{#3}%
     \IfValueT{#4}{%
       \addcontentsline{toe}{subsubsection}{#4}
     }
   }%
-  {%	if \subsubsection
+  {%  if \subsubsection
     \IfNoValueTF{#2}%
     {\hit@subsubsection{#3}}%
     {\hit@subsubsection[#2]{#3}}%
@@ -2211,6 +2241,7 @@ delim_1 "\\hspace*{\\fill}"
 \hit@def@term{cdate}
 
 \hit@def@term{cstudentid}%
+\hit@def@term{cclassid}%
 \hit@def@term{cstudenttype}%
 \hit@def@term{ctitleone}%
 \hit@def@term{ctitletwo}%
@@ -2269,12 +2300,15 @@ delim_1 "\\hspace*{\\fill}"
 \def\hit@cauthortitle{\hit@cxueweishort 士研究生}
 \fi
 \def\hit@kaiti@stageheader{开题报告}% 新定义页眉开题字段  _modified by hithesis-alpha
-\def\hit@zhongqi@stageheader{中期报告}	% 新定义页眉中期字段  _modified by hithesis-alpha
+\def\hit@zhongqi@stageheader{中期报告}  % 新定义页眉中期字段  _modified by hithesis-alpha
 \ifhit@kaiti
 \gdef\hit@stagestatus{开题报告}% 定义stagestatus字段  _modified by hithesis-alpha
 \fi
 \ifhit@zhongqi
 \gdef\hit@stagestatus{中期报告}% 定义stagestatus字段  _modified by hithesis-alpha
+\fi
+\ifhit@bachelor
+\gdef\hit@cxuewei{学士}
 \fi
 \def\hit@bachelor@cxuewei{本科}
 \def\hit@bachelor@cthesisname{毕业设计（论文）}
@@ -2360,75 +2394,100 @@ delim_1 "\\hspace*{\\fill}"
 \newcommand{\hit@put@title}[2][\hit@title@width]{%
   \begin{CJKfilltwosides}[b]{#1}#2\end{CJKfilltwosides}}
 
-
 \def\hit@first@titlepage{%
   \ifhit@bachelor\hit@first@titlepage@bachelor\else\hit@first@titlepage@other\fi}
 \def\hit@second@titlepage{%
   \ifhit@bachelor\hit@second@titlepage@bachelor\else\hit@second@titlepage@other\fi}
 \def\hit@report@titlepage{% 定义新titlepage，区分开题/中期报告中，本科和研究生不同封面
-	\ifhit@bachelor\hit@report@titlepage@bachelor\else\hit@report@titlepage@graduate\fi}
+   \ifhit@bachelor\hit@report@titlepage@bachelor\else\hit@report@titlepage@graduate\fi}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 封面代码改编自 https://github.com/dustincys/PlutoThesisProposal _modified by hithesis-alpha
 % 开题/中期报告封面—研究生 _modified by hithesis-alpha
 \newcommand{\hit@report@titlepage@graduate}{
-	\thispagestyle{empty}
-	\zihao{-2}\vspace*{10mm}
-	\renewcommand{\CJKglue}{\hskip 2pt plus 0.08\baselineskip}
-	\centerline{\kaishu\textbf{\hit@cschoolname}}
-	\vspace{10mm}
-	\centerline{\zihao{2}\songti\textbf{\hit@cdegree\hit@cthesisname\hit@stagestatus}}
-	\zihao{-2}\vspace*{10mm}
-	\renewcommand{\CJKglue}{\hskip 2pt plus 0.08\baselineskip}
-	\centerline{\songti\textbf{题目：\rule[-4pt]{220pt}{0pt}\hspace{-220pt}\textbf\hit@ctitleone}}		
-	\centerline{\hspace{0em}\songti\textbf{\textbf\hit@ctitletwo}}		
-	\zihao{3}\vspace{4\baselineskip}
-	\hspace*{36pt}{\songti
-		\renewcommand{\arraystretch}{2.5}
-		\begin{tabular}{l@{}l}
-			\textbf{院\hfill 系}   & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@caffil}\\
-			\textbf{学\hfill 科}     & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@csubject}\\
-			\textbf{导\hfill 师}     & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@csupervisor}\\
-			\textbf{研\hfill 究\hfill 生}      & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@cauthor}\\
-			\textbf{学\hfill 号}  & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@cstudentid}\\
-			\textbf{\hit@stagestatus 日期} & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@cdate}\\
-		\end{tabular}\renewcommand{\arraystretch}{1}}
-	\vfill
-	\centerline{\songti\textbf{研究生院制}}
-	\vspace{0.5\baselineskip}
-	\centerline{\songti\textbf{二〇一四年九月}}
+   \thispagestyle{empty}
+   \zihao{-2}\vspace*{10mm}
+   \renewcommand{\CJKglue}{\hskip 3pt plus 0.08\baselineskip}
+   \centerline{\kaishu\textbf{\hit@cschoolname}}
+   \vspace*{15mm}
+   \centering{\zihao{2}\songti\textbf{
+    \renewcommand{\CJKglue}{\hskip 3pt plus 0.08\baselineskip}
+    \hit@cdegree\hit@cthesisname\hit@stagestatus
+    }}
+   \zihao{-2}\vspace*{11mm}
+   \renewcommand{\CJKglue}{\hskip 2pt plus 0.08\baselineskip}
+   \begin{center}
+   	\renewcommand{\arraystretch}{1.5}
+   	\begin{tabular}{m{54pt}@{\hspace{15pt}}c}
+       {\xiaoer\songti\textbf{题\hfill 目：}} & \songti\xiaoer\textbf{\hit@ctitleone} \\
+                    & {\hspace{-2em} \songti\xiaoer\textbf{\hit@ctitletwo}} \\
+    	\end{tabular}
+   \end{center}
+    \vspace*{-10pt}
+   \zihao{3}\vspace{3\baselineskip}
+   \begin{center}\songti
+      \renewcommand{\arraystretch}{1.9}
+      \begin{tabular}{l@{}l}
+         \textbf{院\hfill （系）}   & \underline{\makebox[7cm]{\textbf\hit@caffil}}\\
+         \textbf{学\hfill 科}     & \underline{\makebox[7cm]{\textbf\hit@csubject}}\\
+         \textbf{导\hfill 师}     & \underline{\makebox[7cm]{\textbf\hit@csupervisor}}\\
+         \textbf{研\hfill 究\hfill 生}      & \underline{\makebox[7cm]{\textbf\hit@cauthor}}\\
+         \textbf{学\hfill 号}  & \underline{\makebox[7cm]{\textbf\hit@cstudentid}}\\
+         \textbf{\hit@stagestatus 日期} & \underline{\makebox[7cm]{\textbf\hit@cdate}}\\
+      \end{tabular}\renewcommand{\arraystretch}{1}
+    \end{center}
+   \vfill
+   \centerline{\songti\textbf{研究生院制}}
+   \vspace{0.9\baselineskip}
+   %\centerline{\songti\textbf{二〇一四年九月}}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 目前和标准模板还有些许区别，“题目”两个字与题目的内容一同居中，而学校模板是题目两个字位置固定，而题目内容单独居中。 
+%% 2.0.11.0a (2020/02/05) 更新研究生封面开题/中期code，使之与研究生院样例更加接近，但具体页面参数数值未精确校准；
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 开题/中期报告封面—本科生 _modified by hithesis-alpha
+%% 2.0.11.0a (2020/02/05) 更新本科开题/中期封面，代码参fu考zhi自：https://github.com/specialpointcentral/hithesis-beta
+%% 为适应教务处(http://jwc.hit.edu.cn/2566/list.htm)要求，移除班号项，题目第二行改为居中
 \newcommand{\hit@report@titlepage@bachelor}{
-	\thispagestyle{empty}
-	\zihao{-2}\vspace*{10mm}
-	\renewcommand{\CJKglue}{\hskip 3pt plus 0.08\baselineskip}
-	\centering\includegraphics[width=6.2cm]{hitlogo}
-	\vfill
-	\centerline{\xiaoyi\songti\textbf{\hit@bachelor@cthesisname\hit@stagestatus}}
-	\vfill
-	%\zihao{-2}\vspace*{10mm}
-	\renewcommand{\CJKglue}{\hskip 2pt plus 0.08\baselineskip}
-	\centerline{\songti\textbf{题目：\rule[-4pt]{220pt}{0pt}\hspace{-220pt}\textbf\hit@ctitleone}}
-	\centerline{\hspace{0em}\songti\textbf{\textbf\hit@ctitletwo}}		
-	\zihao{3}\vspace{4\baselineskip}
-	\hspace*{70pt}{\songti
-		\renewcommand{\arraystretch}{2.5}
-		\begin{tabular}{l@{}l}
-			\textbf{专\hfill 业}     & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@csubject}\\
-			\textbf{学\hfill 生}      & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@cauthor}\\
-			\textbf{学\hfill 号}  & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@cstudentid}\\
-			\textbf{指\hfill 导\hfill 教\hfill 师}     & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@csupervisor}\\
-			\textbf{日\hfill 期} & \rule[-4pt]{200pt}{1pt}\hspace{-326pt}\centerline{\textbf\hit@cdate}\\
-		\end{tabular}\renewcommand{\arraystretch}{1}}
-	\vfill
-	\centerline{\heiti\textbf{哈尔滨工业大学教务处制}}
-	\vspace{0.5\baselineskip}
+   \thispagestyle{empty}
+   \zihao{-2}\vspace*{10mm}
+   \centering\includegraphics[width=6.2cm]{hitlogo}
+   \vfill
+   \centering{\xiaoyi\songti\textbf{
+    \renewcommand{\CJKglue}{\hskip 3pt plus 0.08\baselineskip}
+    \hit@bachelor@cthesisname\hit@stagestatus
+    }}
+   \vfill
+   %\zihao{-2}\vspace*{10mm}
+   \renewcommand{\CJKglue}{\hskip 2pt plus 0.08\baselineskip}
+   \begin{center}
+    \renewcommand{\arraystretch}{1.5}
+    % 使用空格字符，保证能够空余半个汉字的位置
+    \begin{tabular}{m{54pt}@{\hspace{9pt}}c}
+      {\xiaoer\songti\textbf{题\hfill 目：}} & \songti\xiaoer\textbf{\hit@ctitleone} \\
+                    & {\hspace{-2em} \songti\xiaoer\textbf{\hit@ctitletwo}} \\
+    \end{tabular}
+    \renewcommand{\arraystretch}{1}
+   \end{center}
+   \zihao{3}\vspace{4\baselineskip}
+   \hspace*{70pt}{
+    \begin{center}\songti
+      \renewcommand{\arraystretch}{2.1}
+      \begin{tabular}{l@{\ \ }c}
+         \textbf{专\hfill 业}                     & \underline{\makebox[6.1cm]{\textbf{\hit@csubject}}}\\
+         \textbf{学\hfill 生}                     & \underline{\makebox[6.1cm]{\textbf{\hit@cauthor}}}\\
+         \textbf{学\hfill 号}                     & \underline{\makebox[6.1cm]{\textbf{\hit@cstudentid}}}\\
+         \textbf{指\hfill 导\hfill 教\hfill 师}   & \underline{\makebox[6.1cm]{\textbf{\hit@csupervisor}}}\\
+         \textbf{日\hfill 期}                     & \underline{\makebox[6.1cm]{\textbf{\hit@cdate}}}\\
+      \end{tabular}\renewcommand{\arraystretch}{1}
+    \end{center}
+    }
+   \vfill
+   \centerline{\heiti\textbf{哈尔滨工业大学教务处制}}
+   \vspace{0.5\baselineskip}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 目前本科生开题/中期报告封面，和教务处模板还有区别，主要表现在题目等间距不同，底部“哈尔滨工业大学教务处制”无法设置隶
-%% 书字体(虽然ctex-fontset-siyuan.def 定义了\lishu 命令，但使用报错，暂无精力调试)。 _modified by hithesis-alpha
+%% 书字体(虽然ctex-fontset-siyuan.def 定义了\lishu 命令，但使用报错，暂无精力调试，猜测是字体问题，部分Windows用户可以尝试改为\lishu)。 _modified by hithesis-alpha
 
 \newcommand{\hit@first@titlepage@bachelor}{
 \ifthenelse%
@@ -2446,12 +2505,12 @@ delim_1 "\\hspace*{\\fill}"
     \setlength{\hit@title@width}{4em}
     \heiti\xiaosi
       \begin{tabular}{rc}
-	{\hit@put@title{\hit@bachelor@caffiltitle}\hit@title@csep} & \hit@caffil\\[14pt]
-	{\hit@put@title{\hit@bachelor@cstudentidtitle}\hit@title@csep} & \hit@cstudentid
+   {\hit@put@title{\hit@bachelor@caffiltitle}\hit@title@csep} & \hit@caffil\\[14pt]
+   {\hit@put@title{\hit@bachelor@cstudentidtitle}\hit@title@csep} & \hit@cstudentid
     \end{tabular}
       \begin{tabular}{rc}
-	{\hit@put@title{\hit@bachelor@cmajortitle}\hit@title@csep} & \hit@csubject\\[14pt]
-	{\hit@put@title{\hit@bachelor@csupervisortitle}\hit@title@csep} &  \hit@csupervisor
+   {\hit@put@title{\hit@bachelor@cmajortitle}\hit@title@csep} & \hit@csubject\\[14pt]
+   {\hit@put@title{\hit@bachelor@csupervisortitle}\hit@title@csep} &  \hit@csupervisor
       \end{tabular}
     \end{center}
     \vspace{2.6cm}
@@ -2474,22 +2533,23 @@ delim_1 "\\hspace*{\\fill}"
     \parbox[t][14.2cm][b]{\textwidth}
     {\heiti\xiaosan
       \begin{center} \renewcommand{\arraystretch}{2.5} \heiti
-	\setlength{\hit@title@width}{5.5em}
-	\begin{tabular}{l@{\ \  }c}
+   \setlength{\hit@title@width}{5.5em}
+   \begin{tabular}{l@{\ \  }c}
 
-	  {\xiaoer  \hit@put@title{\hit@bachelor@cthesistitle}} & \underline{\makebox[6.1cm]{\xiaoer \hit@ctitleone}}\\
-								     &  \underline{\makebox[6.1cm]{\xiaoer \hit@ctitletwo}}\\
-									    & \\
-	  {\hit@put@title{\hit@bachelor@cmajortitle}}                  & \underline{\makebox[6.1cm]{\hit@csubject}}\\
-	  {\hit@put@title{\hit@bachelor@cstudentidtitle}}                  & \underline{\makebox[6.1cm]{\hit@cstudentid}}\\
-	  {\hit@put@title{\hit@bachelor@cstudenttitle}}                  & \underline{\makebox[6.1cm]{\hit@cauthor}}\\
-	  {\hit@put@title{\hit@bachelor@csupervisortitle}} & \underline{\makebox[6.1cm]{\hit@csupervisor}}\\
-	  {\hit@put@title{\hit@cdatetitle}} & \underline{\makebox[6.1cm]{\hit@cdate}}
-	\end{tabular} \renewcommand{\arraystretch}{1}
+     {\xiaoer  \hit@put@title{\hit@bachelor@cthesistitle}} & \underline{\makebox[6.1cm]{\xiaoer \hit@ctitleone}}\\
+                             &  \underline{\makebox[6.1cm]{\xiaoer \hit@ctitletwo}}\\
+                               & \\
+     {\hit@put@title{\hit@bachelor@cmajortitle}}                  & \underline{\makebox[6.1cm]{\hit@csubject}}\\
+     {\hit@put@title{\hit@bachelor@cstudentidtitle}}                  & \underline{\makebox[6.1cm]{\hit@cstudentid}}\\
+     {\hit@put@title{\hit@bachelor@cstudenttitle}}                  & \underline{\makebox[6.1cm]{\hit@cauthor}}\\
+     {\hit@put@title{\hit@bachelor@csupervisortitle}} & \underline{\makebox[6.1cm]{\hit@csupervisor}}\\
+     {\hit@put@title{\hit@cdatetitle}} & \underline{\makebox[6.1cm]{\hit@cdate}}
+   \end{tabular} \renewcommand{\arraystretch}{1}
       \end{center}
     }
   \end{center}
 }
+
 \newlength{\hit@etitlelength}%
 \newcommand{\hit@first@titlepage@other}{
   % 封面一
@@ -2525,40 +2585,40 @@ delim_1 "\\hspace*{\\fill}"
   \begin{center}
     {\songti \xiaosi
       \begin{tabular}{@{}r@{：}l@{}}
-	\hit@natclassifiedindextitle & \hit@natclassifiedindex\\
-	\hit@internatclassifiedindextitle & \hit@intclassifiedindex
+   \hit@natclassifiedindextitle & \hit@natclassifiedindex\\
+   \hit@internatclassifiedindextitle & \hit@intclassifiedindex
     \end{tabular}}\hfill
     {\songti \xiaosi
       \begin{tabular}{@{}r@{：}l@{}}
-	\hit@schoolidtitle & \hit@schoolid\\
-	\hit@secretlevel & \hit@statesecrets
+   \hit@schoolidtitle & \hit@schoolid\\
+   \hit@secretlevel & \hit@statesecrets
     \end{tabular}}
   \parbox[t][3.2cm][t]{\textwidth}{\begin{center} \end{center} }
     \parbox[t][2.4cm][t]{\textwidth}{\xiaoer[1]
   \begin{center}\songti\bfseries\hit@cdegree\hit@cthesisname\end{center}
       \ifhit@fulltime\relax\else\begin{center}\songti\textbf{\hit@cbraceleft\hit@cstudenttype\hit@cbraceright}\end{center}\fi}
-	\parbox[t][5cm][t]{\textwidth}{\erhao
+   \parbox[t][5cm][t]{\textwidth}{\erhao
   \begin{center}\heiti\hit@ctitlecover\end{center}
 \ifhit@subtitle\begin{center}\hspace{-4em}\xiaoer\heiti\pozhehao\hit@csubtitle\end{center}\fi}
     \parbox[t][9.8cm][b]{\textwidth}
     {\sihao
       \setlength{\hit@title@width}{6em}
       \begin{center} \renewcommand{\arraystretch}{1.62} \songti
-	\begin{tabular}{l@{\hit@title@csep}l}
-	  {\heiti \hit@put@title{\hit@cauthortitle}}	&	\hit@cauthor\\
-	  {\heiti \hit@put@title{\hit@csupervisortitle}}	&	\hit@csupervisor\\
+   \begin{tabular}{l@{\hit@title@csep}l}
+     {\heiti \hit@put@title{\hit@cauthortitle}} &  \hit@cauthor\\
+     {\heiti \hit@put@title{\hit@csupervisortitle}}   &  \hit@csupervisor\\
         \ifx\hit@cassosupervisor\@empty\else%
-	  {\heiti \hit@put@title{\hit@cassosupervisortitle}}&	\hit@cassosupervisor\\
+     {\heiti \hit@put@title{\hit@cassosupervisortitle}}& \hit@cassosupervisor\\
         \fi
         \ifx\hit@ccosupervisor\@empty\else%
-	  {\heiti \hit@put@title{\hit@ccosupervisortitle}}	&	\hit@ccosupervisor\\
+     {\heiti \hit@put@title{\hit@ccosupervisortitle}} &  \hit@ccosupervisor\\
         \fi
-	  {\heiti \hit@put@title{\hit@cdegreetitle}}	&	\hit@cdegree\\
-	  {\heiti \hit@put@title{\hit@csubjecttitle}}	&	\hit@csubject\\
-	  {\heiti \hit@put@title{\hit@caffiltitle}}		&	\hit@caffil\\
-	  {\heiti \hit@put@title{\hit@cdatetitle}}		&	\hit@cdate\\
-	  {\heiti \hit@put@title{\hit@cschoolnametitle}}	&	\hit@cschoolname
-	\end{tabular} \renewcommand{\arraystretch}{1}
+     {\heiti \hit@put@title{\hit@cdegreetitle}} &  \hit@cdegree\\
+     {\heiti \hit@put@title{\hit@csubjecttitle}}   &  \hit@csubject\\
+     {\heiti \hit@put@title{\hit@caffiltitle}}     &  \hit@caffil\\
+     {\heiti \hit@put@title{\hit@cdatetitle}}      &  \hit@cdate\\
+     {\heiti \hit@put@title{\hit@cschoolnametitle}}   &  \hit@cschoolname
+   \end{tabular} \renewcommand{\arraystretch}{1}
     \end{center} }
   \end{center}
 }
@@ -2583,19 +2643,19 @@ delim_1 "\\hspace*{\\fill}"
     %★★★★若信息内容不太长，不会引起信息内容分行时，使用tabular环境，否则使用下面的tabularx环境。
     {\sihao\renewcommand{\arraystretch}{1.3}
       \begin{tabular}{@{}l@{~}l@{}}
-	\textbf{\hit@eauthortitle\hit@title@esep}		&	\hit@eauthor\\
-	\textbf{\hit@esupervisortitle\hit@title@esep}	&	\hit@esupervisor\\
+   \textbf{\hit@eauthortitle\hit@title@esep}    &  \hit@eauthor\\
+   \textbf{\hit@esupervisortitle\hit@title@esep}   &  \hit@esupervisor\\
       \ifx\hit@eassosupervisor\@empty\else%
-	\textbf{\hit@eassosupervisortitle\hit@title@esep}	&	\hit@eassosupervisor\\
+   \textbf{\hit@eassosupervisortitle\hit@title@esep}  &  \hit@eassosupervisor\\
       \fi
       \ifx\hit@ecosupervisor\@empty\else%
-	\textbf{\hit@ecosupervisortitle\hit@title@esep}	&	\hit@ecosupervisor\\
+   \textbf{\hit@ecosupervisortitle\hit@title@esep} &  \hit@ecosupervisor\\
       \fi
-	\textbf{\hit@edegreetitle\hit@title@esep}		&	\hit@edegree\\
-      \textbf{\hit@esubjecttitle\hit@title@esep}		&\hit@esubject\\
-	\textbf{\hit@eaffiltitle\hit@title@esep}		&\hit@eaffil\\
-	\textbf{\hit@edatetitle\hit@title@esep}		&	\hit@edate\\
-	\textbf{\hit@eschoolnametitle\hit@title@esep}	&	\hit@eschoolname
+   \textbf{\hit@edegreetitle\hit@title@esep}    &  \hit@edegree\\
+      \textbf{\hit@esubjecttitle\hit@title@esep}      &\hit@esubject\\
+   \textbf{\hit@eaffiltitle\hit@title@esep}     &\hit@eaffil\\
+   \textbf{\hit@edatetitle\hit@title@esep}      &  \hit@edate\\
+   \textbf{\hit@eschoolnametitle\hit@title@esep}   &  \hit@eschoolname
     \end{tabular}\renewcommand{\arraystretch}{1}}
   \end{center}
 }
@@ -2603,45 +2663,48 @@ delim_1 "\\hspace*{\\fill}"
 %% 添加开题、中期报告封面判断样式 _modified by hithesis-alpha
 \ifhit@kaiti
 \def\makecover{
-\begin{titlepage}	% 测试自定义的开题封面样式 _modified by hithesis-alpha 
-	\hit@report@titlepage
+\begin{titlepage} % 测试自定义的开题封面样式 _modified by hithesis-alpha 
+   \hit@report@titlepage
 \end{titlepage}
 }
 \renewcommand\thesection{\arabic {section}.}
-\renewcommand\thesubsection{\thesection \arabic {subsection}}	% 	此处去除chapter继承编号，开题/中期报告只有section _modified by hithesis-alpha
-\setcounter{page}{0}	% 重置页数计数器，使目录页页码从1开始
+\renewcommand\thesubsection{\thesection \arabic {subsection}}  %  此处去除chapter继承编号，开题/中期报告只有section _modified by hithesis-alpha
+\setcounter{page}{0} % 重置页数计数器，使目录页页码从1开始
 \else
 \ifhit@zhongqi
 \def\makecover{
-	\begin{titlepage}	% 测试自定义的开题封面样式 _modified by hithesis-alpha 
-		\hit@report@titlepage
-	\end{titlepage}
+   \begin{titlepage} % 测试自定义的开题封面样式 _modified by hithesis-alpha 
+      \hit@report@titlepage
+   \end{titlepage}
 }
 \renewcommand\thesection{\arabic {section}.}
-\renewcommand\thesubsection{\thesection \arabic {subsection}}	% 	此处去除chapter继承编号，开题/中期报告只有section _modified by hithesis-alpha
-\setcounter{page}{0}	% 重置页数计数器，使目录页页码从1开始 _modified by hithesis-alpha
+\renewcommand\thesubsection{\thesection \arabic {subsection}}  %  此处去除chapter继承编号，开题/中期报告只有section _modified by hithesis-alpha
+\setcounter{page}{0} % 重置页数计数器，使目录页页码从1开始 _modified by hithesis-alpha
 \else
 %% 下为原正常论文封面 _modified by hithesis-alpha
 \def\makecover{
   \phantomsection
   \pdfbookmark[0]{\hit@ctitle}{ctitle}
   \xiaosi[1]%
+%    \end{macrocode}
+% \changes{v2.0.10}{2019/6/25}{此处添加提交图书馆电子版的逻辑}
+%    \begin{macrocode}
   \begin{titlepage}
     \hit@first@titlepage
-    \cleardoublepage
+    \ifhit@library\clearpage\else\cleardoublepage\fi
     \hit@second@titlepage
-    \cleardoublepage
+    \ifhit@library\clearpage\else\cleardoublepage\fi
     \ifhit@bachelor
     \relax
     \else
     \phantomsection
     \pdfbookmark[0]{\hit@etitle}{etitle}
     \hit@engcover
-    \cleardoublepage
+    \ifhit@library\clearpage\else\cleardoublepage\fi
     \fi
   \end{titlepage}
   \normalsize
-\hit@makeabstract}
+  \hit@makeabstract}
 \fi
 \fi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2746,7 +2809,11 @@ delim_1 "\\hspace*{\\fill}"
       \advance\leftskip\@tempdima
       \hskip -\leftskip
       % numberline is called here, and it uses \@tempdima
-      {\ifhit@bachelor\sffamily\else\csname hit@toc@font\endcsname\fi\heiti #1}
+%    \end{macrocode}
+% 修改本科生论文目录格式
+% \changes{v2.0.8}{2019/06/15}{修改本科生论文目录格式（感谢QQ:嬴政　同学）}
+%    \begin{macrocode}
+      {\ifhit@bachelor\rmfamily\else\csname hit@toc@font\endcsname\fi\heiti #1}
       \leaders\hbox{$\m@th\mkern \@dotsep mu\hbox{.}\mkern \@dotsep mu$}\hfill
       \nobreak{\normalfont\normalcolor #2}\par
       \penalty\@highpenalty
@@ -2886,14 +2953,14 @@ delim_1 "\\hspace*{\\fill}"
     \ifhit@bachelor\hit@authorization@bachelor\else\hit@authorization@other\fi
     }{%
     \includepdf[fitpaper=true,pagecommand={%
-	\thispagestyle{hit@empty}%
-	\phantomsection\addcontentsline{toc}{chapter}{\ifhit@bachelor\hit@declarename@bachelor\else\hit@authorization@ctitle\fi}%
-	\ifhit@doctor%
+   \thispagestyle{hit@empty}%
+   \phantomsection\addcontentsline{toc}{chapter}{\ifhit@bachelor\hit@declarename@bachelor\else\hit@authorization@ctitle\fi}%
+   \ifhit@doctor%
 %    \end{macrocode}
 % \changes{v1.0.13}{2018/4/5}{添加\cs{texorpdfstring}命令去除书签中带有格式时的警告}
 %    \begin{macrocode}
-		\addcontentsline{toe}{chapter}{\texorpdfstring{\bfseries \hit@authorization@etitle}{\hit@authorization@etitle}}%
-	\fi%
+      \addcontentsline{toe}{chapter}{\texorpdfstring{\bfseries \hit@authorization@etitle}{\hit@authorization@etitle}}%
+   \fi%
     }]{#1}%
   }%
 }
@@ -2910,7 +2977,7 @@ delim_1 "\\hspace*{\\fill}"
 \let\onlinecite\inlinecite
 \renewenvironment{thebibliography}[1]{%
 % \changes{v2.0.6a}{20181220}(添加开题/中期报告，参考文献使用section层级，并且不另起新页) _modified by hithesis-alpha
-%    \begin{macrocode}
+% \begin{macrocode}
   \ifhit@kaiti
   \section{\bibname}[\hit@bibname@etitle]
   \else
@@ -2920,7 +2987,7 @@ delim_1 "\\hspace*{\\fill}"
   \ifhit@openright\cleardoublepage\else\clearpage\fi\phantomsection%
   \hit@appendix@chapter*{\bibname}[\hit@bibname@etitle]
   \fi \fi
-%    \end{macrocode}
+% \end{macrocode}
   \normalsize
   \list{\@biblabel{\@arabic\c@enumiv}}%
   {\renewcommand{\makelabel}[1]{##1\hfill}
@@ -2933,6 +3000,10 @@ delim_1 "\\hspace*{\\fill}"
     \let\p@enumiv\@empty
   \renewcommand\theenumiv{\@arabic\c@enumiv}}%
   \sloppy\frenchspacing
+%    \end{macrocode}
+% \changes{v2.0.7}{2019/03/02}{添加flushbottom到thebibliography环境中}
+%    \begin{macrocode}
+  \flushbottom
 %    \end{macrocode}
 % \changes{v2.0.3}{2018/10/08}{添加参考文献分割开关}
 %    \begin{macrocode}
