Fix cover style for weihai

--- a/front/reportcover.tex
+++ b/front/reportcover.tex
@@ -17,7 +17,8 @@
   ctitleone={局部多孔质气体静压局部多孔质气体静压}, %论文题目，第一行此处最多12个字，多出的字放在\ctitletwo
   ctitletwo={轴承关键技术的研究}, %选填项，论文题目第二行，第一行放不下的文字放在这里
   csubject={机械制造及其自动化},
-   caffil={机电工程学院},
+  cclassid={1604104}, %班号，威海校区特有
+  caffil={机电工程学院},
   cauthor={于冬梅},
   csupervisor={某某某教授},
   % ccosupervisor={某某某教授}, % 联合指导老师
